--- a/src/app/components/client-dashboard/client-dashboard.component.html
+++ b/src/app/components/client-dashboard/client-dashboard.component.html
@@ -1,12 +1,6 @@
-<div class="container">
-    <mat-toolbar>
-      <span class="fill-remaining-space"></span>
-      <span>Quizzes List</span>
-      <span class="fill-remaining-space"></span>
-    </mat-toolbar>
 
   <app-quiz-list></app-quiz-list>
-  </div>
+  <app-questions-list></app-questions-list>
   <!-- cards section--
 <div class="content">
   <div fxLayout="row wrap" fxLayoutGap="16px grid">
