--- a/src/app/components/assessment/assessment.component.html
+++ b/src/app/components/assessment/assessment.component.html
@@ -1,46 +1,47 @@
+<div>
+
+</div>
 <section>
 <div class="container h-100">
-
   <div class="row align-middle">
-    <div class="col-md-6 col-lg-4 column">
-      <div class="card gr-1">
+    <div  class="col-md-6 col-lg-4 column"  *ngFor="let item of data">
+      <div class="card gr-2" *ngIf="item.level == 'BEGINNER'">
         <div class="txt">
-          <h1>BRANDING AND
-            CORPORATE DESIGN</h1>
-          <p>Visual communication and problem-solving</p>
+          <h1>{{item.title}}</h1>
+          <h3>{{item.level}}</h3>
+          <p>{{item.description}}</p>
         </div>
-        <a href="#">more</a>
-        <div class="ico-card">
-          <i class="fa fa-rebel"></i>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-lg-4 column">
-      <div class="card gr-2">
-        <div class="txt">
-          <h1>Web Front-End
-            SOLUTIONS</h1>
-          <p>How design is implemented on the web.</p>
-        </div>
-        <a href="#">more</a>
+        <a href="javascript:void(0)" (click)="openDialog(item.id)">Start Now</a>
         <div class="ico-card">
           <i class="fa fa-codepen"></i>
         </div>
       </div>
-    </div>
-    <div class="col-md-6 col-lg-4 column">
-      <div class="card gr-3">
+      <div *ngIf="item.level=='INTERMIDIATE'"class="card gr-1">
         <div class="txt">
-          <h1>UX/UI WEBsite AND MOBILE app</h1>
-          <p>User Interface and User Experience Design.</p>
+          <h1>{{item.title}}</h1>
+          <h3>{{item.level}}</h3>
+          <p>{{item.description}}</p>
+
         </div>
-        <a href="#">Start Now</a>
+        <a href="javascript:void(0)" (click)="openDialog(item.id)">Start Now</a>
+        <div class="ico-card">
+          <i class="fa fa-rebel"></i>
+        </div>
+      </div>
+
+      <div class="card gr-3" *ngIf="item.level == 'ADVANCED'">
+        <div class="txt">
+          <h1>{{item.title}}</h1>
+          <h3>{{item.level}}</h3>
+          <p>{{item.description}}</p>
+        </div>
+        <a href="javascript:void(0)" (click)="openDialog(item.id)">Start Now</a>
+        <a routerLink="pass">pass</a>
         <div class="ico-card">
           <i class="fa fa-empire"></i>
         </div>
       </div>
     </div>
-
+ </div>
   </div>
-</div>
 </section>
