add client login page

--- a/src/app/components/client/client-login/client-login.component.html
+++ b/src/app/components/client/client-login/client-login.component.html
@@ -9,7 +9,6 @@
   </div>
 </div>
 
-
 <div class="breadcrumbs">
   <div class="container">
     <div class="row align-items-center">
@@ -50,19 +49,21 @@
                 <input type="checkbox" class="form-check-input width-auto" id="exampleCheck1">
                 <label class="form-check-label">Remember me</label>
               </div>
-              <a class="lost-pass" href="https://preview.uideck.com/items/cryptoland/reset-password.html">Forgot password?</a>
+              <a class="lost-pass" href="">Forgot password?</a>
             </div>
-            <div class="button">
-              <button class="btn" type="submit">Sign In</button>
+            <div class="container-login100-form-btn">
+              <button class="login100-form-btn">
+                Login
+              </button>
             </div>
             <div class="or"><span>Or</span></div>
             <div class="alt-option">
               <span class="small-title">Sign in with your work email</span>
-              <a href="javascript:void(0)" class="option-button"><img src="assets/clientSignIn/google.png" alt="#">Sign
+              <a href="javascript:void(0)" class="option-button"><img src="../../../../assets/clientSignIn/google.png" alt="#">Sign
                 In With Google
               </a>
             </div>
-            <h4 class="create-account">Don't have an account? <a href="https://preview.uideck.com/items/cryptoland/signup.html">Sign Up Here</a>
+            <h4 class="create-account">Don't have an account? <a href="">Sign Up Here</a>
             </h4>
           </div>
         </form>
