--- a/src/app/components/client/client-dashboard/client-dashboard.component.html
+++ b/src/app/components/client/client-dashboard/client-dashboard.component.html
@@ -1,2 +1,6 @@
-
+<app-assessments-list></app-assessments-list>
+<app-candidates-list></app-candidates-list>
+<app-quizzes-list></app-quizzes-list>
+<app-questions-list></app-questions-list>
+<app-sessions-list></app-sessions-list>
 
