--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -29,12 +29,10 @@
     <img src="../../../assets/images/header-shape.svg" alt="shape">
   </div> <!-- header-shape -->
 </div> <!-- header content area -->
-
-
-
-<app-blog></app-blog>
-
-
+<app-products></app-products>
+<app-our-features></app-our-features>
+<app-pricing></app-pricing>
+<app-contact></app-contact>
 <app-footer></app-footer>
 
 
