--- a/src/app/components/assessment/start-quiz/start-quiz.component.scss
+++ b/src/app/components/assessment/start-quiz/start-quiz.component.scss
@@ -51,6 +51,13 @@
   .display-timer {
     position: absolute;
     top: 5rem;
+    left: 2rem;
+  }
+  .display-question-timer {
+    position: absolute;
+    top: 5rem;
     right: 2rem;
+    display: inline;
+
   }
 }
