--- a/src/app/components/client/dashboard/assessments-list/assessments-list.component.html
+++ b/src/app/components/client/dashboard/assessments-list/assessments-list.component.html
@@ -6,7 +6,7 @@
   </mat-toolbar>
 </div>
 <div class="search-div">
-  <button mat-raised-button  (click)="openDialog()">
+  <button mat-raised-button color="primary" (click)="openDialog()">
     <mat-icon>add</mat-icon>Create
   </button>
   <mat-form-field class="search-form-field" floatLabel="never">
@@ -23,17 +23,17 @@
       <mat-cell *matCellDef="let element">{{element.id}}</mat-cell>
     </ng-container>
     <ng-container matColumnDef="title">
-      <mat-header-cell *matHeaderCellDef  mat-sort-header>Title</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef  >Title</mat-header-cell>
       <mat-cell *matCellDef="let element">{{element.title}}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="expirationDate">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Expiration Date</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef >Expiration Date</mat-header-cell>
       <mat-cell *matCellDef="let element">
         {{element.expirationDate | date :'d MMMM y, HH:mm'}}</mat-cell>
     </ng-container>
     <ng-container matColumnDef="assessmentCode">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Assessment Code</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef >Assessment Code</mat-header-cell>
       <mat-cell *matCellDef="let element">{{element.assessmentCode}}</mat-cell>
     </ng-container>
     <ng-container matColumnDef="actions" stickyEnd>
