--- a/src/app/components/client/dashboard/quizzes-list/quizzes-list.component.html
+++ b/src/app/components/client/dashboard/quizzes-list/quizzes-list.component.html
@@ -6,7 +6,7 @@
   </mat-toolbar>
 </div>
 <div class="search-div">
-  <button mat-raised-button  (click)="openDialog()">
+  <button mat-raised-button color="primary" (click)="openDialog()">
     <mat-icon>add</mat-icon>Create
   </button>
   <mat-form-field class="search-form-field" floatLabel="never">
