--- a/src/app/components/client/dashboard/dashboard.component.html
+++ b/src/app/components/client/dashboard/dashboard.component.html
@@ -173,7 +173,7 @@ Sami benhajhmid
           </li>
           <li class="user-profile dropdown dropdown-animated scale-left">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <img class="profile-img img-fluid" src="src/assets/dashboard/img/avatar/avatar.jpg" alt="">
+              <img class="profile-img img-fluid" src="../../../../assets/dashboard/img/avatar/avatar.jpg" alt="#">
             </a>
             <ul class="dropdown-menu dropdown-md">
               <li>
@@ -228,7 +228,7 @@ Sami benhajhmid
           <li class="side-nav-header">
             <span>Navigation</span>
           </li>
-          <li class="nav-item dropdown open">
+          <li class="nav-item dropdown">
             <a routerLink="assessments" class="dropdown-toggle">
 
 <span class="icon-holder">
