--- a/src/app/components/client/dashboard/dashboard.component.html
+++ b/src/app/components/client/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
       <div class="header-container">
         <div class="nav-logo">
           <a href="index.html">
-            <b><img src="../../../../assets/dashboard/img/logo.png" alt=""></b>
+            <b><img src="../../../../assets/dashboard/img/logo1.png" alt=""></b>
             <span class="logo">
 <img src="../../../../assets/dashboard/img/logo-text.png" alt="">
 </span>
@@ -220,8 +220,6 @@ Sami benhajhmid
         </ul>
       </div>
     </div>
-
-
     <div class="side-nav expand-lg">
       <div class="side-nav-inner">
         <ul class="side-nav-menu">
@@ -243,7 +241,7 @@ Sami benhajhmid
           <li class="nav-item dropdown">
             <a routerLink="candidates" class="dropdown-toggle">
 <span class="icon-holder">
-<i class="lni-cloud"></i>
+<i class="lni-users"></i>
 </span>
               <span class="title">Candidates</span>
               <span class="arrow">
@@ -267,7 +265,7 @@ Sami benhajhmid
             <a routerLink="questions" class="dropdown-toggle">
 
 <span class="icon-holder">
-<i class="lni-timer"></i>
+<i class="lni-question-circle"></i>
 </span>
               <span class="title">Questions</span>
               <span class="arrow">
