--- a/src/app/components/client/dashboard/candidates-list/candidates-list.component.html
+++ b/src/app/components/client/dashboard/candidates-list/candidates-list.component.html
@@ -24,13 +24,9 @@
       <mat-header-cell *matHeaderCellDef  mat-sort-header>ID</mat-header-cell>
       <mat-cell *matCellDef="let element">{{element.id}}</mat-cell>
     </ng-container>
-    <ng-container matColumnDef="firstName">
-      <mat-header-cell *matHeaderCellDef  mat-sort-header>First Name</mat-header-cell>
-      <mat-cell *matCellDef="let element">{{element.firstName}}</mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="lastName">
-      <mat-header-cell *matHeaderCellDef  mat-sort-header>Last Name</mat-header-cell>
-      <mat-cell *matCellDef="let element">{{element.lastName}}</mat-cell>
+    <ng-container matColumnDef="username">
+      <mat-header-cell *matHeaderCellDef  mat-sort-header>Username</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element.username}}</mat-cell>
     </ng-container>
     <ng-container matColumnDef="email">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Email</mat-header-cell>
