--- a/src/app/modals/add-candidate-dialog/add-candidate-dialog.component.html
+++ b/src/app/modals/add-candidate-dialog/add-candidate-dialog.component.html
@@ -2,12 +2,8 @@
 <div mat-dialog-content>
   <form [formGroup]="candidateForm">
     <mat-form-field appearance="outline">
-      <mat-label>First Name</mat-label>
-      <input formControlName="firstName" matInput placeholder="First Name">
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-      <mat-label>Last Name</mat-label>
-      <input formControlName="lastName" matInput placeholder="Last Name">
+      <mat-label>Username</mat-label>
+      <input formControlName="username" matInput placeholder="username">
     </mat-form-field>
     <mat-form-field appearance="outline">
       <mat-label>Email</mat-label>
