--- a/src/app/components/assessmentTaker/assessment-taker-login/assessment-taker-login.component.html
+++ b/src/app/components/assessmentTaker/assessment-taker-login/assessment-taker-login.component.html
@@ -26,7 +26,7 @@
 </div>
 <div class="account-login section">
   <div class="container">
-    <div class="row">
+    <div class="row" style="align-content: center">
       <div class="col-lg-6 offset-lg-3 col-md-10 offset-md-1 col-12">
         <form (ngSubmit)="candidateLogin()" class="card login-form inner-content">
           <div class="card-body">
