--- a/src/app/components/top-navbar/top-navbar.component.html
+++ b/src/app/components/top-navbar/top-navbar.component.html
@@ -7,8 +7,9 @@
       <div class="col-lg-12">
         <nav class="navbar navbar-expand-lg">
           <a class="navbar-brand" href="#">
-
-            <svg height="37" viewBox="0 0 150 37" width="150" xmlns="http://www.w3.org/2000/svg"><text fill="#fff" font-family="Poppins" font-size="36" font-weight="600" x="-.464" y="31.228">SCareer</text></svg>
+            <img src="../../../assets/images/logo.svg" alt="Logo">
+          <!--  <svg height="37" viewBox="0 0 150 37" width="150" xmlns="http://www.w3.org/2000/svg"><text fill="#fff" font-family="Poppins" font-size="36" font-weight="600" x="-.464" y="31.228">SCareer</text></svg>
+          -->
           </a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarOne" aria-controls="navbarOne" aria-expanded="false" aria-label="Toggle navigation">
