--- a/src/app/components/client/dashboard/dashboard.component.html
+++ b/src/app/components/client/dashboard/dashboard.component.html
@@ -56,7 +56,7 @@ Sami benhajhmid
                   <li class="list-item">
                     <a href="#" class="media-hover">
                       <div class="media-img">
-                        <img src="src/assets/dashboard/img/avatar/avatar.jpg" alt="">
+                        <img src="../../../../assets/dashboard/img/avatar/avatar.jpg" alt="">
                       </div>
                       <div class="info">
 <span class="title">
@@ -69,11 +69,11 @@ Sami benhajhmid
                   <li class="list-item">
                     <a href="#" class="media-hover">
                       <div class="media-img">
-                        <img src="../../../../assets/img/avatar/user3.png" alt="">
+                        <img src="../../../../assets/dashboard/img/avatar/user3.png" alt="">
                       </div>
                       <div class="info">
 <span class="title">
- Frank Handrics
+ sami benhajhmid
 </span>
                         <span class="sub-title">You have 87 unread messages</span>
                       </div>
@@ -183,7 +183,7 @@ Sami benhajhmid
                       <img src="../../../../assets/dashboard/img/avatar/avatar.jpg" alt="">
                     </div>
                     <div class="info">
-                      <span class="title text-semibold">Sami benhaj</span>
+                      <span class="title text-semibold">Sami benhajhmid</span>
                       <span class="sub-title">Admin</span>
                     </div>
                   </li>
